# slither-icfg

./: .gitignore  README.md  analyze.py  archived_icfg.py  icfg.py  pyproject.toml  slithIR.py
dataset/scan_queue/: example.sol
dataset/scan_queue/min_slippage_example/src/: SafeSwapWithMin.sol  VulnerableIgnoreMinAddLiquidity.sol  VulnerableV3HardcodedLimit.sol  VulnerableZeroMinSwap.sol
dataset/scan_queue/min_slippage_example/src/interfaces/: IUniswapV2RouterLike.sol  IUniswapV3PoolLike.sol
dataset/scan_queue/min_slippage_example/src/mocks/: MockERC20.sol  MockV2Router.sol  MockV3Pool.sol
dataset/scan_queue/min_slippage_example/test/: Slippage.t.sol
tmp/: MockV2Router.sol  SafeSwapWithMin.sol
